<resources>
    <string name="app_name">MyAppFeb</string>
    <string name="text">Hello World!!!!!!!!!!</string>
    <string name="battery_level">Battery level: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Navigation</string>
    <string name="nav_header_subtitle">android.Sreeddevi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="heading">Services In Android</string>
    <string name="startButtonText">Start the Service</string>
    <string name="stopButtonText">Stop the Service</string>
    <string name="facebook_app_id">514241456282806</string>
    <string name="fb_login_protocol_scheme">fb514241456282806</string>
    <string name="buttonText">Display Next Course</string>
    <string name="headingmvp">MVP Architecture Pattern</string>
    <string name="subHeading">Luminar Android Online Courses</string>
    <string name="description">Course Description</string>
</resources>